// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`TimePicker renders disabled time-picker correctly 1`] = `
<div>
  <div
    class="ui-select ui-time-select-wrapper disabled"
  >
    <div
      class="ui-dropdown-trigger-box"
    >
      <div
        aria-autocomplete="list"
        aria-expanded="false"
        aria-haspopup="true"
        class="ui-select-selection"
        role="combobox"
      >
        <span
          class="ui-select-text ui-select-text-placeholder"
        >
          00:00:00
        </span>
        <i
          class="ui-icon ui-icon-time-circle theme-default ui-time-select-icon"
        />
      </div>
    </div>
    <div
      class="ui-dropdown"
      style="min-width:0;width:240px;left:0;top:0;position:absolute;animation-duration:300ms;display:none;overflow:hidden;z-index:2020"
    >
      <div
        class="ui-time-select"
      >
        <span
          class="ui-select"
        >
          <span
            aria-autocomplete="list"
            aria-expanded="false"
            aria-haspopup="true"
            class="ui-select-selection"
            role="combobox"
            style="height:100%;max-height:250px;overflow:auto"
          >
            <ul
              class="ui-menu ui-menu-light ui-menu-inline"
              role="menu"
            />
          </span>
        </span>
        <span
          class="ui-select"
        >
          <span
            aria-autocomplete="list"
            aria-expanded="false"
            aria-haspopup="true"
            class="ui-select-selection"
            role="combobox"
            style="height:100%;max-height:250px;overflow:auto"
          >
            <ul
              class="ui-menu ui-menu-light ui-menu-inline"
              role="menu"
            />
          </span>
        </span>
        <span
          class="ui-select"
        >
          <span
            aria-autocomplete="list"
            aria-expanded="false"
            aria-haspopup="true"
            class="ui-select-selection"
            role="combobox"
            style="height:100%;max-height:250px;overflow:auto"
          >
            <ul
              class="ui-menu ui-menu-light ui-menu-inline"
              role="menu"
            />
          </span>
        </span>
      </div>
      <div
        class="ui-select-bottom"
      >
        <a
          class="clear-btn"
          href="javascript:;"
        >
          清除
        </a>
        <a
          class="confirm-btn"
          href="javascript:;"
        >
          确认
        </a>
      </div>
    </div>
  </div>
</div>
`;

exports[`TimePicker renders disabled time-select correctly 1`] = `
<div
  class="ui-time-select"
>
  <span
    class="ui-select"
  >
    <span
      aria-autocomplete="list"
      aria-expanded="false"
      aria-haspopup="true"
      class="ui-select-selection"
      role="combobox"
      style="height:100%;max-height:250px;overflow:auto"
    >
      <ul
        class="ui-menu ui-menu-light ui-menu-inline"
        role="menu"
      />
    </span>
  </span>
  <span
    class="ui-select"
  >
    <span
      aria-autocomplete="list"
      aria-expanded="false"
      aria-haspopup="true"
      class="ui-select-selection"
      role="combobox"
      style="height:100%;max-height:250px;overflow:auto"
    >
      <ul
        class="ui-menu ui-menu-light ui-menu-inline"
        role="menu"
      />
    </span>
  </span>
  <span
    class="ui-select"
  >
    <span
      aria-autocomplete="list"
      aria-expanded="false"
      aria-haspopup="true"
      class="ui-select-selection"
      role="combobox"
      style="height:100%;max-height:250px;overflow:auto"
    >
      <ul
        class="ui-menu ui-menu-light ui-menu-inline"
        role="menu"
      />
    </span>
  </span>
</div>
`;

exports[`TimePicker renders isRadius time-picker correctly 1`] = `
<div>
  <div
    class="ui-select ui-time-select-wrapper radius"
    style="width:160px"
  >
    <div
      class="ui-dropdown-trigger-box"
    >
      <div
        aria-autocomplete="list"
        aria-expanded="false"
        aria-haspopup="true"
        class="ui-select-selection"
        role="combobox"
      >
        <span
          class="ui-select-text ui-select-text-placeholder"
        >
          00:00:00
        </span>
        <i
          class="ui-icon ui-icon-time-circle theme-default ui-time-select-icon"
        />
      </div>
    </div>
    <div
      class="ui-dropdown"
      style="min-width:0;width:240px;left:0;top:0;position:absolute;animation-duration:300ms;display:none;overflow:hidden;z-index:2020"
    >
      <div
        class="ui-time-select"
      >
        <span
          class="ui-select"
        >
          <span
            aria-autocomplete="list"
            aria-expanded="false"
            aria-haspopup="true"
            class="ui-select-selection"
            role="combobox"
            style="height:100%;max-height:250px;overflow:auto"
          >
            <ul
              class="ui-menu ui-menu-light ui-menu-inline"
              role="menu"
            />
          </span>
        </span>
        <span
          class="ui-select"
        >
          <span
            aria-autocomplete="list"
            aria-expanded="false"
            aria-haspopup="true"
            class="ui-select-selection"
            role="combobox"
            style="height:100%;max-height:250px;overflow:auto"
          >
            <ul
              class="ui-menu ui-menu-light ui-menu-inline"
              role="menu"
            />
          </span>
        </span>
        <span
          class="ui-select"
        >
          <span
            aria-autocomplete="list"
            aria-expanded="false"
            aria-haspopup="true"
            class="ui-select-selection"
            role="combobox"
            style="height:100%;max-height:250px;overflow:auto"
          >
            <ul
              class="ui-menu ui-menu-light ui-menu-inline"
              role="menu"
            />
          </span>
        </span>
      </div>
      <div
        class="ui-select-bottom"
      >
        <a
          class="clear-btn"
          href="javascript:;"
        >
          清除
        </a>
        <a
          class="confirm-btn"
          href="javascript:;"
        >
          确认
        </a>
      </div>
    </div>
  </div>
</div>
`;

exports[`TimePicker renders normal time-picker correctly 1`] = `
<div>
  <div
    class="ui-select ui-time-select-wrapper"
  >
    <div
      class="ui-dropdown-trigger-box"
    >
      <div
        aria-autocomplete="list"
        aria-expanded="false"
        aria-haspopup="true"
        class="ui-select-selection"
        role="combobox"
      >
        <span
          class="ui-select-text ui-select-text-placeholder"
        >
          00:00:00
        </span>
        <i
          class="ui-icon ui-icon-time-circle theme-default ui-time-select-icon"
        />
      </div>
    </div>
    <div
      class="ui-dropdown"
      style="min-width:0;width:240px;left:0;top:0;position:absolute;animation-duration:300ms;display:none;overflow:hidden;z-index:2020"
    >
      <div
        class="ui-time-select"
      >
        <span
          class="ui-select"
        >
          <span
            aria-autocomplete="list"
            aria-expanded="false"
            aria-haspopup="true"
            class="ui-select-selection"
            role="combobox"
            style="height:100%;max-height:250px;overflow:auto"
          >
            <ul
              class="ui-menu ui-menu-light ui-menu-inline"
              role="menu"
            />
          </span>
        </span>
        <span
          class="ui-select"
        >
          <span
            aria-autocomplete="list"
            aria-expanded="false"
            aria-haspopup="true"
            class="ui-select-selection"
            role="combobox"
            style="height:100%;max-height:250px;overflow:auto"
          >
            <ul
              class="ui-menu ui-menu-light ui-menu-inline"
              role="menu"
            />
          </span>
        </span>
        <span
          class="ui-select"
        >
          <span
            aria-autocomplete="list"
            aria-expanded="false"
            aria-haspopup="true"
            class="ui-select-selection"
            role="combobox"
            style="height:100%;max-height:250px;overflow:auto"
          >
            <ul
              class="ui-menu ui-menu-light ui-menu-inline"
              role="menu"
            />
          </span>
        </span>
      </div>
      <div
        class="ui-select-bottom"
      >
        <a
          class="clear-btn"
          href="javascript:;"
        >
          清除
        </a>
        <a
          class="confirm-btn"
          href="javascript:;"
        >
          确认
        </a>
      </div>
    </div>
  </div>
</div>
`;
